# TEP

./: CIndividual.cpp  CIndividual.h  README.md
Lab1/Zad1/: constants.h  main.cpp
Lab1/Zad2and3/: constants.h  main.cpp
Lab1/Zad4/: CTable.cpp  CTable.h  Constants.cpp  Constants.h  main.cpp
Lab2/: CMakeLists.txt  CNumber.cpp  CNumber.h  constants.cpp  main.cpp
Lab2Git/: CNumber.h
Lab3/: CMenu.cpp  CMenu.h  CNode.cpp  CNode.h  CTree.cpp  CTree.h  Constants.h  Main.cpp  constants.h
Lab4/: CError.cpp  CError.h  CMakeLists.txt  CMenu.cpp  CMenu.h  CNode.h  CResult.h  CResultSaver.h  CTests.cpp  CTests.h  CTree.cpp  CTree.h  Constants.cpp  Constants.h  Main.cpp  main.cpp
Lab5/: CMakeLists.txt  CMySmartPointer.h  CRefCounter.cpp  CRefCounter.h  CTree.cpp  CTree.h  Main.cpp
Lista_Poprawkowa/: CDateTime.cpp  CDateTime.h  CTimeSpan.cpp  CTimeSpan.h  Constants.h  Literals.h  main.cpp
MiniProject/GroupingProject/: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  CMakeLists.txt  Constants.h  GaussianGroupingEvaluatorFactory.cpp  GaussianGroupingEvaluatorFactory.h  GroupingChallenge.cpp  GroupingChallenge.vcxproj.filters  GroupingChallenge.vcxproj.xml  GroupingEvaluator.cpp  Optimizer.cpp  Optimizer.h  Point.h
